--- a/ntin-hie-app-ui/src/component/UserInput/index.css
+++ b/ntin-hie-app-ui/src/component/UserInput/index.css
@@ -19,12 +19,13 @@
 .container {
   background-image: url(./backgroundImage.png);
   background-repeat: no-repeat;
+  height: 100vh;
 }
 .Card {
   margin-left: 15%;
   margin-bottom: 10px;
   width: 50%;
-  border: 5px #ff8000 solid;
+  border: 5px hsl(30, 100%, 50%) solid;
   border-radius: 10px;
   background: rgb(255, 174, 87, 0.3);
 }
