--- a/ntin-hie-app-ui/src/component/Menu/index.css
+++ b/ntin-hie-app-ui/src/component/Menu/index.css
@@ -26,6 +26,7 @@
 .menu_container {
   background-image: url(./backround.png);
   background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
 }
 
