--- a/ntin-hie-app-ui/src/component/ShitOutput/index.css
+++ b/ntin-hie-app-ui/src/component/ShitOutput/index.css
@@ -19,6 +19,7 @@
 .container {
   background-image: url(./backgroundImage.png);
   background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
 }
 .Card {
